# FreeCAD_KTextEditor

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
freecad/KEditor/: commands.py  features.py  init_gui.py
python/: CMakeLists.txt  bindings.h  bindings.xml
src/: CMakeLists.txt  KEditor.cpp  KEditor.h  KEditorView.cpp  KEditorView.h  __init__.py  editor_export.h
